AlgoritmaParser.py
# Generated from /Users/cakir/code/antlr/Algoritma.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class AlgoritmaParser ( Parser ):

    grammarFileName = "Algoritma.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'*'", "'/'", "'%'", "'+'", "'-'", "'('", 
                     "')'", "'\"'", "'#{'", "'}'", "'yaz'", "'git'", "'e\u011Fer'", 
                     "'ise'", "'yoksa'", "','", "'al'", "'ve'", "'veya'", 
                     "'de\u011Fil'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ACIKLAMA", "SATIRNO", "SAYI", "BASLA", 
                      "DUR", "WS", "DEGISKEN", "ARITOP", "KARSOP", "ATAMOP" ]

    RULE_prog = 0
    RULE_ifade = 1
    RULE_metin = 2
    RULE_metin_ici = 3
    RULE_satir = 4
    RULE_komut = 5
    RULE_kosul = 6
    RULE_atama = 7

    ruleNames =  [ "prog", "ifade", "metin", "metin_ici", "satir", "komut", 
                   "kosul", "atama" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    ACIKLAMA=21
    SATIRNO=22
    SAYI=23
    BASLA=24
    DUR=25
    WS=26
    DEGISKEN=27
    ARITOP=28
    KARSOP=29
    ATAMOP=30

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BASLA(self):
            return self.getToken(AlgoritmaParser.BASLA, 0)

        def DUR(self):
            return self.getToken(AlgoritmaParser.DUR, 0)

        def satir(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmaParser.SatirContext)
            else:
                return self.getTypedRuleContext(AlgoritmaParser.SatirContext,i)


        def getRuleIndex(self):
            return AlgoritmaParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = AlgoritmaParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            self.match(AlgoritmaParser.BASLA)
            self.state = 20
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==AlgoritmaParser.SATIRNO:
                self.state = 17
                self.satir()
                self.state = 22
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 23
            self.match(AlgoritmaParser.DUR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfadeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AlgoritmaParser.RULE_ifade

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class DegiskenContext(IfadeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AlgoritmaParser.IfadeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def DEGISKEN(self):
            return self.getToken(AlgoritmaParser.DEGISKEN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDegisken" ):
                listener.enterDegisken(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDegisken" ):
                listener.exitDegisken(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDegisken" ):
                return visitor.visitDegisken(self)
            else:
                return visitor.visitChildren(self)


    class CarpBolContext(IfadeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AlgoritmaParser.IfadeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ifade(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmaParser.IfadeContext)
            else:
                return self.getTypedRuleContext(AlgoritmaParser.IfadeContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCarpBol" ):
                listener.enterCarpBol(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCarpBol" ):
                listener.exitCarpBol(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCarpBol" ):
                return visitor.visitCarpBol(self)
            else:
                return visitor.visitChildren(self)


    class ParantezContext(IfadeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AlgoritmaParser.IfadeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ifade(self):
            return self.getTypedRuleContext(AlgoritmaParser.IfadeContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParantez" ):
                listener.enterParantez(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParantez" ):
                listener.exitParantez(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParantez" ):
                return visitor.visitParantez(self)
            else:
                return visitor.visitChildren(self)


    class SayiContext(IfadeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AlgoritmaParser.IfadeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SAYI(self):
            return self.getToken(AlgoritmaParser.SAYI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSayi" ):
                listener.enterSayi(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSayi" ):
                listener.exitSayi(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSayi" ):
                return visitor.visitSayi(self)
            else:
                return visitor.visitChildren(self)


    class ToplaCikarContext(IfadeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AlgoritmaParser.IfadeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ifade(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmaParser.IfadeContext)
            else:
                return self.getTypedRuleContext(AlgoritmaParser.IfadeContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterToplaCikar" ):
                listener.enterToplaCikar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitToplaCikar" ):
                listener.exitToplaCikar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitToplaCikar" ):
                return visitor.visitToplaCikar(self)
            else:
                return visitor.visitChildren(self)



    def ifade(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = AlgoritmaParser.IfadeContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_ifade, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [AlgoritmaParser.SAYI]:
                localctx = AlgoritmaParser.SayiContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 26
                self.match(AlgoritmaParser.SAYI)
                pass
            elif token in [AlgoritmaParser.DEGISKEN]:
                localctx = AlgoritmaParser.DegiskenContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 27
                self.match(AlgoritmaParser.DEGISKEN)
                pass
            elif token in [AlgoritmaParser.T__5]:
                localctx = AlgoritmaParser.ParantezContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 28
                self.match(AlgoritmaParser.T__5)
                self.state = 29
                self.ifade(0)
                self.state = 30
                self.match(AlgoritmaParser.T__6)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 42
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 40
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                    if la_ == 1:
                        localctx = AlgoritmaParser.CarpBolContext(self, AlgoritmaParser.IfadeContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_ifade)
                        self.state = 34
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 35
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AlgoritmaParser.T__0) | (1 << AlgoritmaParser.T__1) | (1 << AlgoritmaParser.T__2))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 36
                        self.ifade(6)
                        pass

                    elif la_ == 2:
                        localctx = AlgoritmaParser.ToplaCikarContext(self, AlgoritmaParser.IfadeContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_ifade)
                        self.state = 37
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 38
                        _la = self._input.LA(1)
                        if not(_la==AlgoritmaParser.T__3 or _la==AlgoritmaParser.T__4):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 39
                        self.ifade(5)
                        pass

             
                self.state = 44
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class MetinContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def metin_ici(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmaParser.Metin_iciContext)
            else:
                return self.getTypedRuleContext(AlgoritmaParser.Metin_iciContext,i)


        def getRuleIndex(self):
            return AlgoritmaParser.RULE_metin

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMetin" ):
                listener.enterMetin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMetin" ):
                listener.exitMetin(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMetin" ):
                return visitor.visitMetin(self)
            else:
                return visitor.visitChildren(self)




    def metin(self):

        localctx = AlgoritmaParser.MetinContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_metin)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(AlgoritmaParser.T__7)
            self.state = 50
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 48
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        self.state = 46
                        self.metin_ici()
                        pass

                    elif la_ == 2:
                        self.state = 47
                        self.matchWildcard()
                        pass

             
                self.state = 52
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 53
            self.match(AlgoritmaParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Metin_iciContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifade(self):
            return self.getTypedRuleContext(AlgoritmaParser.IfadeContext,0)


        def getRuleIndex(self):
            return AlgoritmaParser.RULE_metin_ici

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMetin_ici" ):
                listener.enterMetin_ici(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMetin_ici" ):
                listener.exitMetin_ici(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMetin_ici" ):
                return visitor.visitMetin_ici(self)
            else:
                return visitor.visitChildren(self)




    def metin_ici(self):

        localctx = AlgoritmaParser.Metin_iciContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_metin_ici)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(AlgoritmaParser.T__8)
            self.state = 56
            self.ifade(0)
            self.state = 57
            self.match(AlgoritmaParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SatirContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SATIRNO(self):
            return self.getToken(AlgoritmaParser.SATIRNO, 0)

        def komut(self):
            return self.getTypedRuleContext(AlgoritmaParser.KomutContext,0)


        def ACIKLAMA(self):
            return self.getToken(AlgoritmaParser.ACIKLAMA, 0)

        def getRuleIndex(self):
            return AlgoritmaParser.RULE_satir

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSatir" ):
                listener.enterSatir(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSatir" ):
                listener.exitSatir(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSatir" ):
                return visitor.visitSatir(self)
            else:
                return visitor.visitChildren(self)




    def satir(self):

        localctx = AlgoritmaParser.SatirContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_satir)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(AlgoritmaParser.SATIRNO)
            self.state = 60
            self.komut()
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==AlgoritmaParser.ACIKLAMA:
                self.state = 61
                self.match(AlgoritmaParser.ACIKLAMA)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KomutContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AlgoritmaParser.RULE_komut

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class YazContext(KomutContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AlgoritmaParser.KomutContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ifade(self):
            return self.getTypedRuleContext(AlgoritmaParser.IfadeContext,0)

        def metin(self):
            return self.getTypedRuleContext(AlgoritmaParser.MetinContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYaz" ):
                listener.enterYaz(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYaz" ):
                listener.exitYaz(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitYaz" ):
                return visitor.visitYaz(self)
            else:
                return visitor.visitChildren(self)


    class GitContext(KomutContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AlgoritmaParser.KomutContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SATIRNO(self):
            return self.getToken(AlgoritmaParser.SATIRNO, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGit" ):
                listener.enterGit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGit" ):
                listener.exitGit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGit" ):
                return visitor.visitGit(self)
            else:
                return visitor.visitChildren(self)


    class AtamalarContext(KomutContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AlgoritmaParser.KomutContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def atama(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmaParser.AtamaContext)
            else:
                return self.getTypedRuleContext(AlgoritmaParser.AtamaContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtamalar" ):
                listener.enterAtamalar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtamalar" ):
                listener.exitAtamalar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtamalar" ):
                return visitor.visitAtamalar(self)
            else:
                return visitor.visitChildren(self)


    class GirdiContext(KomutContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AlgoritmaParser.KomutContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def DEGISKEN(self, i:int=None):
            if i is None:
                return self.getTokens(AlgoritmaParser.DEGISKEN)
            else:
                return self.getToken(AlgoritmaParser.DEGISKEN, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGirdi" ):
                listener.enterGirdi(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGirdi" ):
                listener.exitGirdi(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGirdi" ):
                return visitor.visitGirdi(self)
            else:
                return visitor.visitChildren(self)


    class EgerContext(KomutContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AlgoritmaParser.KomutContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def kosul(self):
            return self.getTypedRuleContext(AlgoritmaParser.KosulContext,0)

        def komut(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmaParser.KomutContext)
            else:
                return self.getTypedRuleContext(AlgoritmaParser.KomutContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEger" ):
                listener.enterEger(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEger" ):
                listener.exitEger(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEger" ):
                return visitor.visitEger(self)
            else:
                return visitor.visitChildren(self)



    def komut(self):

        localctx = AlgoritmaParser.KomutContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_komut)
        self._la = 0 # Token type
        try:
            self.state = 96
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                localctx = AlgoritmaParser.YazContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.match(AlgoritmaParser.T__10)
                self.state = 67
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [AlgoritmaParser.T__5, AlgoritmaParser.SAYI, AlgoritmaParser.DEGISKEN]:
                    self.state = 65
                    self.ifade(0)
                    pass
                elif token in [AlgoritmaParser.T__7]:
                    self.state = 66
                    self.metin()
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 2:
                localctx = AlgoritmaParser.GitContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                self.match(AlgoritmaParser.T__11)
                self.state = 70
                self.match(AlgoritmaParser.SATIRNO)
                pass

            elif la_ == 3:
                localctx = AlgoritmaParser.EgerContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 71
                self.match(AlgoritmaParser.T__12)
                self.state = 72
                self.kosul(0)
                self.state = 73
                self.match(AlgoritmaParser.T__13)
                self.state = 74
                self.komut()
                self.state = 77
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 75
                    self.match(AlgoritmaParser.T__14)
                    self.state = 76
                    self.komut()


                pass

            elif la_ == 4:
                localctx = AlgoritmaParser.AtamalarContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 79
                self.atama()
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==AlgoritmaParser.T__15:
                    self.state = 80
                    self.match(AlgoritmaParser.T__15)
                    self.state = 81
                    self.atama()
                    self.state = 86
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 5:
                localctx = AlgoritmaParser.GirdiContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 87
                self.match(AlgoritmaParser.DEGISKEN)
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==AlgoritmaParser.T__15:
                    self.state = 88
                    self.match(AlgoritmaParser.T__15)
                    self.state = 89
                    self.match(AlgoritmaParser.DEGISKEN)
                    self.state = 94
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 95
                self.match(AlgoritmaParser.T__16)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KosulContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AlgoritmaParser.RULE_kosul

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class DegilContext(KosulContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AlgoritmaParser.KosulContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def kosul(self):
            return self.getTypedRuleContext(AlgoritmaParser.KosulContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDegil" ):
                listener.enterDegil(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDegil" ):
                listener.exitDegil(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDegil" ):
                return visitor.visitDegil(self)
            else:
                return visitor.visitChildren(self)


    class KarsilastirContext(KosulContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AlgoritmaParser.KosulContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ifade(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmaParser.IfadeContext)
            else:
                return self.getTypedRuleContext(AlgoritmaParser.IfadeContext,i)

        def KARSOP(self):
            return self.getToken(AlgoritmaParser.KARSOP, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKarsilastir" ):
                listener.enterKarsilastir(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKarsilastir" ):
                listener.exitKarsilastir(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKarsilastir" ):
                return visitor.visitKarsilastir(self)
            else:
                return visitor.visitChildren(self)


    class ParantezKosulContext(KosulContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AlgoritmaParser.KosulContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def kosul(self):
            return self.getTypedRuleContext(AlgoritmaParser.KosulContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParantezKosul" ):
                listener.enterParantezKosul(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParantezKosul" ):
                listener.exitParantezKosul(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParantezKosul" ):
                return visitor.visitParantezKosul(self)
            else:
                return visitor.visitChildren(self)


    class VeContext(KosulContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AlgoritmaParser.KosulContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def kosul(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmaParser.KosulContext)
            else:
                return self.getTypedRuleContext(AlgoritmaParser.KosulContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVe" ):
                listener.enterVe(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVe" ):
                listener.exitVe(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVe" ):
                return visitor.visitVe(self)
            else:
                return visitor.visitChildren(self)


    class VeyaContext(KosulContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AlgoritmaParser.KosulContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def kosul(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmaParser.KosulContext)
            else:
                return self.getTypedRuleContext(AlgoritmaParser.KosulContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVeya" ):
                listener.enterVeya(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVeya" ):
                listener.exitVeya(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVeya" ):
                return visitor.visitVeya(self)
            else:
                return visitor.visitChildren(self)



    def kosul(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = AlgoritmaParser.KosulContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_kosul, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                localctx = AlgoritmaParser.KarsilastirContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 99
                self.ifade(0)
                self.state = 100
                self.match(AlgoritmaParser.KARSOP)
                self.state = 101
                self.ifade(0)
                pass

            elif la_ == 2:
                localctx = AlgoritmaParser.ParantezKosulContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 103
                self.match(AlgoritmaParser.T__5)
                self.state = 104
                self.kosul(0)
                self.state = 105
                self.match(AlgoritmaParser.T__6)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 119
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 117
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
                    if la_ == 1:
                        localctx = AlgoritmaParser.VeContext(self, AlgoritmaParser.KosulContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_kosul)
                        self.state = 109
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 110
                        self.match(AlgoritmaParser.T__17)
                        self.state = 111
                        self.kosul(6)
                        pass
